--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 
 <body>
+  <div id="widthDisplay"></div>
+
+  
   <!-- меню бургер open-->
   <div class="navigat">
     <div class="menu" id="btn">
