--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   
-  <div id="widthDisplay"></div>
+  <div id="widthDisplay" height="100vh" position="absolute"></div>
   
   
   <!-- меню бургер open-->
