--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   
-  <div id="widthDisplay"></div>
+  <div id="widthDisplay">"Внутренняя ширина окна: " + window.innerWidth + "px" </div>
   
   
   <!-- меню бургер open-->
